# data-mining

./: .gitignore  CMakeLists.txt  Makefile  README.md  comp  compDeletion  compadd  comparision.cpp  comparison_add.cpp  comparison_del.cpp  comparison_deletion.cpp  comparison_scan.cpp  compdel  compscan  graph.h  intermediate.txt  main  main.cpp  parser.cpp  scan.h  vertex.h
Iscan/: Makefile  bfsTree.h  graph.h  intermediate.txt  iscan.h  main  main.cpp  vertex.h
Scan/: Makefile  graph.h  intermediate.txt  main  main.cpp  scan.h
customer/: CG1 copy.gml  CG1.gml
example/: example.gml
polbooks/: test.gml
readgml/: readgml.c  readgml.h
